# esp32-weather-epd

./: .gitignore
platformio/: platformio.ini
platformio/include/: api_deserializer.h  api_response.h  config.h  conversions.h  display_utils.h  icons.h  quantities.h  renderer.h  widgets.h
platformio/include/icons/: icons_aggregate_32x32.h  icons_aggregate_64x64.h
platformio/lib/owa-icons/: owa-icons.cpp  owa-icons.h
platformio/lib/owa-icons/icons/: icons_aggregate_16x16.h  icons_aggregate_24x24.h  icons_aggregate_48x48.h
platformio/src/: api_deserializer.cpp  client_utils.cpp  conversions.cpp  display_utils.cpp  icons.cpp  main.cpp  renderer.cpp  widgets.cpp
platformio/src/locales/: locale.cpp  locale_de_DE.inc  locale_en_GB.inc  locale_en_US.inc  locale_nl_BE.inc
simulation/: Arduino.h  ArduinoJson.h  CMakeLists.txt  HTTPClient.h  Main.qml  WiFiType.h  adafruitfont.cpp  display.cpp  display.h  displayimageprovider.cpp  displayimageprovider.h  gfxfont.h  main.cpp
